--- a/mastishk/src/app/doctor-profile/doctor-profile.page.scss
+++ b/mastishk/src/app/doctor-profile/doctor-profile.page.scss
@@ -90,6 +90,7 @@
     padding-bottom: 5px;
     border-color: #f2f2f7;
     font-size: 14px;
+    --placeholder-opacity: .5;
 }
 .btmBtnWrap{
     text-align: center;
@@ -99,11 +100,13 @@
 }
 .customSelect, .customTextarea{
     padding-left: 0;
-    padding-top: 0;
+    --padding-top: 0px;
     --padding-bottom: 5px;
     border-bottom: 1px solid #f2f2f7;
     font-size: 14px;
     color: #000;
+    --placeholder-color: #797979;
+    --placeholder-opacity: .5;
 }
 .customTextarea{
     --padding-right: 0px;
