--- a/mastishk/src/app/registeration/registeration.page.scss
+++ b/mastishk/src/app/registeration/registeration.page.scss
@@ -4,14 +4,14 @@
 .loginWrap {
     display: flex;
     height: 100%;
-    align-items: center;
+    // align-items: center;
 }
 .fullW{
     width: 100%;
 }
 .logo{
-    max-width: 120px;
-    margin: 0 auto 40px auto;
+    max-width: 90px;
+    margin: 32px auto 32px auto;
 }
 .formWrap{
     margin-bottom: 16px;
