--- a/mastishk/src/theme/variables.scss
+++ b/mastishk/src/theme/variables.scss
@@ -92,6 +92,7 @@
  --color-blue: #080854;
  --color-green: #367c10;
  --color-orange: #e28500;
+ --ion-no-bg-btn: none;
 }
 
 @media (prefers-color-scheme: dark) {
