--- a/mastishk/src/app/doctor-profile/doctor-profile.page.scss
+++ b/mastishk/src/app/doctor-profile/doctor-profile.page.scss
@@ -98,7 +98,8 @@
 .btmBtnWrap ion-button {
     min-width: 150px;
 }
-.customSelect, .customTextarea{
+
+.customSelect, .customTextarea, ion-select{
     padding-left: 0;
     --padding-top: 0px;
     --padding-bottom: 5px;
@@ -110,4 +111,5 @@
 }
 .customTextarea{
     --padding-right: 0px;
+    --padding-start: 0;
 }
