--- a/mastishk/src/app/health-worker/health-worker.page.scss
+++ b/mastishk/src/app/health-worker/health-worker.page.scss
@@ -98,8 +98,8 @@
 .btmBtnWrap ion-button {
     min-width: 150px;
 }
-.customSelect, .customTextarea{
-    padding-left: 0;
+.customSelect, .customTextarea, ion-select{
+    --padding-left: 0;
     --padding-top: 0px;
     --padding-bottom: 5px;
     border-bottom: 1px solid #f2f2f7;
