--- a/mastishk/src/theme/variables.scss
+++ b/mastishk/src/theme/variables.scss
@@ -93,6 +93,7 @@
  --color-green: #367c10;
  --color-orange: #e28500;
  --ion-no-bg-btn: none;
+ --background-opacity: 0;
 }
 
 @media (prefers-color-scheme: dark) {
