--- a/mastishk/src/app/registeration/registeration.page.html
+++ b/mastishk/src/app/registeration/registeration.page.html
@@ -10,10 +10,10 @@
       <div class="logo">
         <img src="../../assets/logo.svg" />
       </div>
-      <ion-text color="color-secondary" class="headingStyle1">
+      <ion-text color="color-secondary" class="headingStyle1 ion-text-center">
         <h2>Create Account</h2>
       </ion-text>
-      <div class="formWrap">
+      <div class="formWrap ion-text-center">
         <ion-radio-group class="iconicRadioGroup">
           <ion-radio class="iconicRadio self" value="self" checked></ion-radio>
           <ion-radio class="iconicRadio doctor" id="doctor"></ion-radio>
