--- a/mastishk/src/app/registeration/registeration.page.html
+++ b/mastishk/src/app/registeration/registeration.page.html
@@ -15,10 +15,10 @@
       </ion-text>
       <div class="formWrap ion-text-center">
         <ion-radio-group class="iconicRadioGroup">
-          <ion-radio class="iconicRadio self" value="self" checked></ion-radio>
-          <ion-radio class="iconicRadio doctor" id="doctor"></ion-radio>
-          <ion-radio class="iconicRadio mhp" value="mental-health-profile"></ion-radio>
-          <ion-radio class="iconicRadio hp" value="health-profile"></ion-radio>
+          <ion-radio class="iconicRadio self" value="1" checked></ion-radio>
+          <ion-radio class="iconicRadio doctor" id="2"></ion-radio>
+          <ion-radio class="iconicRadio hp" value="3"></ion-radio>
+          <ion-radio class="iconicRadio mhp" value="4"></ion-radio>
         </ion-radio-group>
       </div>
       <div class="formWrap">
@@ -58,6 +58,9 @@
         </span>
       </div>
       <div class="formWrap">
+        <ion-datetime placeholder="DOB" formControlName="dob" value="1994-12-15" displayFormat="DD/MM/YYYY" min="1947-01-01"></ion-datetime>
+      </div>
+      <!-- <div class="formWrap">
         <ion-select class="customSelect" placeholder="Role" formControlName="roleId">
           <ion-select-option *ngFor="let r of role" [value]="r.value" value="Y">{{r.name}}</ion-select-option>
         </ion-select>
@@ -66,7 +69,7 @@
         <ion-select class="customSelect" placeholder="Role Type" formControlName="child">
           <ion-select-option *ngFor="let rt of roleType" [value]="rt.value" value="Y">{{rt.type}}</ion-select-option>
         </ion-select>
-      </div>
+      </div> -->
       <div class="formWrap">
         <ion-input class="inputField" formControlName="password" placeholder="Password" type="password"></ion-input>
         <span class="error-message validationMsg" *ngIf="isSubmitted && errorControl.password.errors?.required">
