--- a/mastishk/src/app/login/login.page.scss
+++ b/mastishk/src/app/login/login.page.scss
@@ -17,8 +17,10 @@
     margin-bottom: 16px;
 }
 .inputField{
-    padding: 0px;
     border-bottom: 1px solid #808080;
+    padding-left: 8px;
+    --padding-top: 5px;
+    --padding-bottom: 5px;
 }
 .has-focus{
     border-color: #1a1a1a;
