--- a/mastishk/src/app/registeration/registeration.page.html
+++ b/mastishk/src/app/registeration/registeration.page.html
@@ -15,10 +15,10 @@
       </ion-text>
       <div class="formWrap ion-text-center">
         <ion-radio-group class="iconicRadioGroup">
-          <ion-radio class="iconicRadio self" value="1" checked></ion-radio>
-          <ion-radio class="iconicRadio doctor" id="2"></ion-radio>
-          <ion-radio class="iconicRadio hp" value="3"></ion-radio>
-          <ion-radio class="iconicRadio mhp" value="4"></ion-radio>
+          <div><ion-radio class="iconicRadio self" value="1" checked></ion-radio><span>Self</span></div>
+          <div><ion-radio class="iconicRadio doctor" id="2"></ion-radio><span>Doctor</span></div>
+          <div><ion-radio class="iconicRadio hp" value="3"></ion-radio><span>HP</span></div>
+          <div><ion-radio class="iconicRadio mhp" value="4"></ion-radio><span>MHP</span></div>
         </ion-radio-group>
       </div>
       <div class="formWrap">
@@ -58,7 +58,7 @@
         </span>
       </div>
       <div class="formWrap">
-        <ion-datetime placeholder="DOB" formControlName="dob" value="1994-12-15" displayFormat="DD/MM/YYYY" min="1947-01-01"></ion-datetime>
+        <ion-datetime class="inputField dateTime" placeholder="DOB" formControlName="dob" value="1994-12-15" displayFormat="DD/MM/YYYY" min="1947-01-01"></ion-datetime>
       </div>
       <!-- <div class="formWrap">
         <ion-select class="customSelect" placeholder="Role" formControlName="roleId">
